# ranges

./: .clang_complete  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: apply.hpp  check_iter.hpp  collect.hpp  const_iter.hpp  const_iterator.hpp  count_iter.hpp  counting_range.hpp  enum_iter.hpp  enumerated_range.hpp  filter_iter.hpp  filtered_range.hpp  invoke.hpp  iterator.hpp  iterator_range.hpp  iterator_traits.hpp  map_iter.hpp  mapped_range.hpp  meta_iter.hpp  ptr_iter.hpp  range.hpp  range_adapter.hpp  range_fwd.hpp  range_traits.hpp  ranges.hpp  rev_iter.hpp  reversed_range.hpp  traits.hpp  tuple_traits.hpp  zipped_range.hpp
include/detail/: adl_traits.hpp  apply.hpp  filter_iter.hpp  filtered_range.hpp  invoke.hpp  invoke_traits.hpp  map_iter.hpp  mapped_range.hpp  tuple_traits.hpp
test/: apply.cpp  collect.cpp  const_iterator.cpp  counting_range.cpp  enumerated_range.cpp  filtered_range.cpp  invoke.cpp  iterator_range.cpp  mapped_range.cpp  range.cpp  range_adapter.cpp  reversed_range.cpp  zipped_range.cpp
